--- a/birthday-app/src/styles.css
+++ b/birthday-app/src/styles.css
@@ -1,11 +1,15 @@
 /* ----------------- Global ----------------- */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: "Poppins", sans-serif;
   background: linear-gradient(to bottom right, #ffdde1, #ee9ca7);
-  height: 100dvh;
+  min-height: 100dvh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -338,7 +342,7 @@ button {
 }
 
 /* ---------------- RESPONSIVE ---------------- */
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .cards-grid {
     grid-template-columns: repeat(3, 70px);
     gap: 10px;
@@ -359,4 +363,4 @@ button {
     font-size: 1rem;
     padding: 20px;
   }
-}
+} */
